<project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.bytedeco.helloworld</groupId>
    <artifactId>helloworld-test</artifactId>
    <version>1.5.1-SNAPSHOT</version>
    <properties>
        <exec.mainClass>HelloWorldTest</exec.mainClass>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.bytedeco</groupId>
            <artifactId>helloworld-platform</artifactId>
            <version>1.0-1.5.1-SNAPSHOT</version>
        </dependency>
    </dependencies>
    <build>
        <sourceDirectory>.</sourceDirectory>
    </build>
</project>
